--- a/package.json
+++ b/package.json
@@ -14,27 +14,29 @@
     "test": "jest",
     "lint": "eslint src --ext .ts",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run lint && npm run test",
+    "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/your-username/boxberry-api-lib.git"
+    "url": "git+https://github.com/barsbay/boxberry-api-lib.git"
   },
   "keywords": [
     "boxberry",
     "api",
     "delivery",
-    "typescript"
+    "typescript",
+    "shipping",
+    "logistics"
   ],
-  "author": "Your Name",
+  "author": "Bayramov",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/your-username/boxberry-api-lib/issues"
+    "url": "https://github.com/barsbay/boxberry-api-lib/issues"
   },
-  "homepage": "https://github.com/your-username/boxberry-api-lib#readme",
+  "homepage": "https://github.com/barsbay/boxberry-api-lib#readme",
   "dependencies": {
     "axios": "^1.6.7"
   },
@@ -47,5 +49,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 } 
