--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boxberry-api-lib",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "TypeScript библиотека для работы с API Boxberry",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,7 +16,7 @@
     "prepare": "npm run build",
     "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
+    "version": "",
     "postversion": "git push && git push --tags"
   },
   "repository": {
@@ -53,4 +53,4 @@
   "engines": {
     "node": ">=14.0.0"
   }
-} 
+}
